--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -118,3 +118,14 @@
     height: 70vh;
     flex-direction: column;
 }
+
+/* Ant Design Overrides */
+.ant-checkbox-wrapper {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.ant-radio-wrapper {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
